# spreading-vs-mln-structure

./: .gitignore  README.md  pyproject.toml  run_experiments.py  test_reproducibility.py
.dvc/: config
_mabcd_properties/: Figure10.jl  Figure11.jl  Figure12.jl  Figure14.jl  Figure15.jl  Figure16.jl  Figure17.jl  Figure3.jl  Figure4.jl  Figure5.jl  Figure6.jl  Figure7.jl  Figure8.jl  Figure9.jl  Project.toml  README.md  utilities.jl
_mabcd_properties/experiments/: edges_cor_convergence.jl  time.jl  time_experiment_layer_params.csv  time_multilayergm.py  time_no_phase6.jl  xi_ckm.jl  xi_timik.jl
_mabcd_properties/experiments_results/: speed_experiment_results.csv  speed_experiment_results_multilayergm.csv  xi_experiments_results_timik.csv
data/multi_abcd/: .gitignore  configurations.dvc  correlations.dvc  degree_sequences.dvc
data/nets_generated/: .gitignore  series_0.dvc  series_1.dvc  series_10.dvc  series_11.dvc  series_12.dvc  series_13.dvc  series_2.dvc  series_3.dvc  series_4.dvc  series_5.dvc  series_6.dvc  series_7.dvc  series_8.dvc  series_9.dvc
data/nets_properties/: .gitignore  configuration_model.dvc  correlations_verbose.dvc  nets_generated_properties.csv
data/raw_results/: .gitignore  series_0.dvc  series_1.dvc  series_10.dvc  series_2.dvc  series_3.dvc  series_4.dvc  series_5.dvc  series_6.dvc  series_7.dvc  series_8.dvc  series_9.dvc
data/results_processed/: .gitignore  (+3 more)
env/: conda.yaml  requirements.txt
mln_abcd_properties/: Manifest.toml  README.md
src/: generator.py  main.py  mln_abcd.py  params_handler.py  result_handler.py  utils.py
(+96 files in other folders)
